Mon Feb 11 06:33:10 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: unify newFileParser and
	  newReader.

Mon Feb 11 04:28:52 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java
	  (pushScope): forgot to remove useless line.

Mon Feb 11 04:26:04 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/LocalScope.java: new subclass of Scope.

	* net/loveruby/cflat/ast/Scope.java: move local scope only methods
	  to LocalScope class.

	* net/loveruby/cflat/ast/ToplevelScope.java: local scope only
	  methods are moved to LocalScope, do not need to disable
	  #variables, #allVariables, ...

	* net/loveruby/cflat/ast/Frame.java: is useless, removed.

	* net/loveruby/cflat/ast/DefinedFunction.java: Frame ->
	  LocalScope.

	* net/loveruby/cflat/ast/BlockNode.java: Scope -> LocalScope.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: Frame
	  removed.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: Scope
	  -> LocalScope.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java
	  (pushScope): check duplicated local variables.

Mon Feb 11 03:59:19 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Scope.java: use LinkedHashMap to unify
	  entities and entitiesMap (entities should be ordered).

	* net/loveruby/cflat/ast/Frame.java: ditto.

	* net/loveruby/cflat/ast/ToplevelScope.java: ditto.

	* net/loveruby/cflat/ast/Scope.java: remove unused method
	  #entities.  Use #variables instead.

	* net/loveruby/cflat/ast/Frame.java: ditto.

	* net/loveruby/cflat/ast/ConstantTable.java: use

	* net/loveruby/cflat/compiler/TypeResolver.java: remove useless
	  code.

Mon Feb 11 03:08:16 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Scope.java: ban all allocate* methods,
	  privateEntitiesMap.  Use #declareEntity instead.

	* net/loveruby/cflat/ast/Frame.java: ditto.

	* net/loveruby/cflat/ast/ToplevelScope.java: ditto.
